--- a/myapp/index.html
+++ b/myapp/index.html
@@ -4,7 +4,13 @@
  </head>
  <body>
  
-  this is everything that goes in the document!
+  happy 
+  happy 
+  happy 
+  happy 
+  happy 
+  happy 
+  happy 
   
  </body>
 </html>
